@@ -1,3 +1,10 @@
+2003-02-26  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* subr.el (custom-declare-variable-early): Reference
+	dumped-lisp.el in comment.
+
+	* custom.el (at end): Remark about `custom-declare-variable-list'.
+
 2003-03-01  Ben Wing  <ben@xemacs.org>
 
 	* cmdloop.el:
